# manuscript2presentation

./: .gitignore  LICENSE  README.md  ashby-how-to-write-paper.canvas.tsx  ashby-how-to-write-paper.yaml  main.py  pyproject.toml  run.sh
.cursor/skills/ai-dm-paper-review/: SKILL.md
.cursor/skills/paper-to-slides/: SKILL.md
.cursor/skills/paper-to-slides/scripts/: create_pptx.py
src/text2speech/: __init__.py  canvas_video.py  cli.py  engine.py  ollama_client.py  pptx_builder.py  slides.py  tts.py  tts_base.py  tts_kokoro.py
