[project]
name = "text2speech"
version = "0.1.0"
description = "Convert text to speech using locally running Ollama models for text processing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.4.0",
    "pyttsx3>=2.90",
    "typer>=0.13.0",
    "rich>=13.0.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "click>=8.0.0",
    "python-pptx>=1.0.0",
    "pypdf>=4.0.0",
    "imageio-ffmpeg>=0.5.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
kokoro = [
    "kokoro-onnx>=0.4.0",
    "misaki[en]>=0.9.0",
]

[project.scripts]
text2speech = "text2speech.cli:app"
t2s = "text2speech.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/text2speech"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]
